--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -105,6 +105,7 @@
     },
     "create": {
       "yourdetails": "Your detail",
+      "fullname":"Enter your full name",
       "firstname": "First Name",
       "firstnameP": "Enter first name",
       "lastname": "Last Name",
@@ -113,6 +114,7 @@
       "jobTitleP": "Enter job title",
       "shortBio": "Career goals",
       "shortBioP": "Enter career goals",
+      "linkFB":"Enter your link Facebook",
       "personal": "Personal Information",
       "date": "Date of Birth",
       "dateP": "Enter value dd-mm-yyyy",
@@ -123,6 +125,7 @@
       "address": "Address",
       "addressP": "Enter address",
       "academic": "Academic",
+      "academicP": "Enter information about Academic",
       "major": "Majors",
       "majorP": "Enter major",
       "university": "University",
@@ -146,6 +149,8 @@
       "companyP": "Enter company",
       "location": "Location",
       "locationP": "Enter location",
+      "project":"Work Experience",
+      "projectP":"Enter information about work experience",
       "cancel": "Cancel",
       "save": "Save"
     },
@@ -172,12 +177,14 @@
       "error": "Error",
       "firstName": "Invalid first name",
       "lastName": "Invalid last name",
+      "fullName": "Invalid full name",
       "date": "Invalid date of birth",
       "email": "Invalid email",
       "address": "Invalid address",
       "phone": "Invalid phone number",
       "image": "Please only choose the image file with JPG, JPEG, PNG or GIF",
       "job": "Invalid Job",
+      "gender":"Please choose your gender",
       "major": "Invalid major",
       "university": "Invalid university",
       "BY": "Invalid begin year",
