--- a/src/translations/vi/common.json
+++ b/src/translations/vi/common.json
@@ -105,6 +105,7 @@
     },
     "create": {
       "yourdetails": "Chi tiết bản thân",
+      "fullname":"Nhập họ và tên",
       "firstname": "Tên",
       "firstnameP": "Nhập tên",
       "lastname": "Họ",
@@ -113,6 +114,7 @@
       "jobTitleP": "Nhập chức vụ",
       "shortBio": "Mục tiêu nghề nghiệp",
       "shortBioP": "Nhập mục tiêu nghề nghiệp",
+      "linkFB":"Nhập liên kết Facebook",
       "personal": "Thông tin cá nhân",
       "date": "Ngày sinh",
       "dateP": "Nhập theo định dạng ngày-tháng-năm",
@@ -123,6 +125,7 @@
       "address": "Địa chỉ thường trú",
       "addressP": "Nhập địa chỉ thường trú",
       "academic": "Học vấn",
+      "academicP": "Nhập thông tin về học vấn",
       "major": "Ngành học",
       "majorP": "Nhập ngành học",
       "university": "Trường đại học",
@@ -146,6 +149,8 @@
       "companyP": "Nhập tên công ty",
       "location": "Địa chỉ",
       "locationP": "Nhập địa chỉ",
+      "project":"Dự án đã thực hiện",
+      "projectP":"Nhập thông tin về dự án đã thực hiện",
       "cancel": "Hủy",
       "save": "Lưu"
     },
@@ -172,12 +177,14 @@
       "error": "Lỗi",
       "firstName": "Tên không hợp lệ",
       "lastName": "Họ không hợp lệ",
+      "fullName": "Họ và tên không hợp lệ",
       "date": "Ngày sinh không hợp lệ",
       "email": "Email không hợp lệ",
       "address": "Địa chỉ không hợp lệ",
       "phone": "Số điện thoại không hợp lệ",
       "image": "Vui lòng chỉ chọn file ảnh có đuôi jpg, jpeg, png hoặc gif",
       "job": "Chức vụ không hợp lệ",
+      "gender":"Vui lòng chọn giới tính",
       "major": "Ngành học không hợp lệ",
       "university": "Trường đại học không hợp lệ",
       "BY": "Năm bắt đầu học không hợp lệ",
