Update form Login

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -689,6 +689,7 @@
   "header": {
     "account": "Account",
     "profile": "Profile",
+    "apply":"My Applications",
     "setting": "Settings",
     "language": "Language",
     "vi":"VIETNAMESE",
