--- a/src/translations/vi/common.json
+++ b/src/translations/vi/common.json
@@ -690,6 +690,7 @@
   "header": {
     "account": "Quản lý tài khoản",
     "profile": "Thông tin cá nhân",
+    "apply":"Đơn ứng tuyển của tôi",
     "setting": "Thiết lập",
     "language": "Ngôn ngữ",
     "vi":"TIẾNG VIỆT",
