--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -9,6 +9,9 @@
     "Interviews": "Interviews"
   },
   "actors": {
+    "deactivate": "Deactivate",
+    "active": "Active",
+    "block": "Disable",
     "candidate": "Candidate",
     "candidates": "Candidates",
     "recruiter": "Recruiter",
@@ -21,6 +24,14 @@
     "FEMALE": "Female"
   },
   "account": {
+    "title1": "We sent a snippet to: ",
+    "tittle2": "Please enter the code and reset a new password",
+    "tittle3": "Congratulations, you have recovered your password! Please log in again with your new password",
+    "code": "Enter code",
+    "mailVery": "Password recovery code sent to your email",
+    "passNew": "Enter new password",
+    "passNewConfirmation": "Re-enter new password",
+    "changePass": "Reset password",
     "back": "Back",
     "login": "Login",
     "loginW": "Login with",
@@ -43,10 +54,11 @@
     "titleP": "Does not matter! Just enter the email address you registered with to reset.",
     "recover": "Recover your password",
     "active": "You need to activate account!",
+    "loginApply": "You need to log in to apply!",
     "titleA": "Please check your email inbox and take action to activate your account.",
     "codeA": "Enter the code",
     "activeA": "Active account",
-    "": ""
+    "copy": "Link copied"
   },
   "admin": {
     "tags": {
@@ -61,8 +73,11 @@
       "newTag": "New tag"
     },
     "account": {
-      "fullName":"Full name",
-      "phone":"Phone",
+      "confirmBlock": "Are you sure you want to disable this account?",
+      "blockAcc": "Disable account",
+      "block": "Agree",
+      "fullName": "Full name",
+      "phone": "Phone",
       "accounts": "Accounts",
       "role": "Role",
       "allRoles": "All roles",
@@ -182,8 +197,8 @@
       "fullName": "Invalid full name",
       "date": "Invalid date of birth",
       "email": "Invalid email",
-      "salary":"Invalid Salary value",
-      "expired":"Invalid application deadline",
+      "salary": "Invalid Salary value",
+      "expired": "Invalid application deadline",
       "address": "Invalid address",
       "phone": "Invalid phone number",
       "image": "Please only choose the image file with JPG, JPEG, PNG or GIF",
@@ -203,14 +218,15 @@
       "all": "Please fill all fields"
     },
     "appliedJob": {
-      "searchCandidate":"Search for Candidates",
+      "introduction": "Brief introduction about yourself",
+      "searchCandidate": "Search for Candidates",
       "appliedJob": "Applied Job",
       "searchJob": "Search for Applied Job",
       "searchPost": "Search for Recruitment Post",
       "attachedCV": "Attached CV",
       "noFile": "No File Attached",
       "noJob": "No Job Applied",
-      "noPost":"No Recruitment Post",
+      "noPost": "No Recruitment Post",
       "active": "active jobs",
       "status": {
         "status": "Status",
@@ -223,12 +239,26 @@
       }
     },
     "notice": {
+      "chooseCv": "Please choose a CV.",
+      "chooseCvv": "Please select a file to upload.",
       "deleteCV": "Do you want to delete this CV?",
       "deletePostContentCV": "This CV can not be restore after being deleted.",
       "saveCV": "Do you want to save this CV?",
       "savePostContentCV": "Are you certain that the correct information has been entered into the fields?",
       "cancel": "Are you sure exit this page ?",
-      "cancelPostContent": "Information filled will not be saved."
+      "cancelPostContent": "Information filled will not be saved.",
+      "applyJob": "Apply for job",
+      "apply1": "Choose CV download method:",
+      "apply2": "Use CV Online",
+      "apply3": "Upload CV from computer",
+      "apply4": "Select CV:",
+      "apply5": "Choose a CV",
+      "apply6": "Drag and drop your PDF file or click to select it.",
+      "del": "Delete",
+      "close": "Close",
+      "done": "Done",
+      "apply": "Successful application!",
+      "applyy": "Thank you for applying."
     },
     "tags": {
       "deleteCV": "Delete CV successfully",
@@ -237,13 +267,17 @@
       "downloadCV": "Download CV successfully",
       "createCV": "Create CV successfully",
       "saveInformation": "Update personal information successfully",
-      "editPost":"Update post recruitment successfully",
-      "updateRec":"Feedback sent to candidate",
-      "apply":"Successful application"
+      "editPost": "Update post recruitment successfully",
+      "updateRec": "Feedback sent to candidate",
+      "apply": "Successful application",
+      "errorName": "Please do not leave CV name blank"
     }
   },
   "recruiter": {
     "dashboard": {
+      "check": "Unable to submit review",
+      "titleCheck": "It looks like you have already submitted a review for this CV",
+      "upProfile": "Company information updated successfully",
       "statisticOfActiveJobsByPosition": "Statistic of Active Jobs By Position",
       "seeAllReport": "See All Report",
       "inProgressCandidateList": "In Progress Candidate List",
@@ -261,15 +295,15 @@
       "acceptance": "Acceptance",
       "accepted": "Accepted",
       "rejected": "Rejected",
-      "profileCompany":"Updated Company infomation successfully"
+      "profileCompany": "Updated Company infomation successfully"
     },
     "time": {
-      "seconds":"seconds",
-      "minutes":"minutes",
-      "hours":"hours",
-      "days":"days",
-      "ago":"ago",
-      "posted":"Posted"
+      "seconds": "seconds",
+      "minutes": "minutes",
+      "hours": "hours",
+      "days": "days",
+      "ago": "ago",
+      "posted": "Posted"
     },
     "jobs": {
       "total": "Job Posts",
@@ -460,8 +494,9 @@
   },
   "interviewer": {
     "questionSheet": {
-      "content":"Content",
-      "feedback":"Feedback",
+      "enterFeedback": "Enter Feedback here",
+      "content": "Content",
+      "feedback": "Feedback",
       "interview": "Interview",
       "noQuestionSheet": "No Question Sheet available",
       "findQuestion": "Search for Question",
@@ -596,6 +631,7 @@
     "selectRightDate": "Please select the appropriate date"
   },
   "findJob": {
+    "clear": "Clear all",
     "salary": "Salary",
     "jobType": "Job Type",
     "daily": "Daily",
@@ -614,22 +650,37 @@
     "time2": "Past Week",
     "time3": "Past Month",
     "time4": "Any Time",
-    "titleNew":"Recruitment and job news quickly updated 24/7"
+    "titleNew": "Recruitment and job news quickly updated 24/7"
   },
-  "company":{
-    "businessAreas":"Business areas:",
-    "location":"Location:",
-    "size":"Company size:",
-    "information":"Company Details",
-    "introduction":"Description",
-    "address":"Office Address",
-    "culture":"Culture",
-    "jobs":"Jobs",
-    "":"",
-    "":"",
-    "":"",
-    "":""
-
+  "company": {
+    "businessAreas": "Business areas:",
+    "location": "Location:",
+    "size": "Company size:",
+    "information": "Company Details",
+    "introduction": "Description",
+    "address": "Office Address",
+    "culture": "Culture",
+    "jobs": "Jobs",
+    "banner": "Upload Banner",
+    "imgB": "Cover photo",
+    "imgA": "Logo image",
+    "imglogo": "Company logo",
+    "logo": "Upload logo",
+    "nameCompany": "Company Name",
+    "nameCompanyT": "Enter company name",
+    "intro": "Brief introduction",
+    "introT": "Enter introduction",
+    "addressT": "Enter office address",
+    "addressmain": "Headquarters",
+    "addressmainT": "Select city",
+    "businessAreasT": "Enter business area",
+    "web": "Company Website",
+    "webT": "Enter company Web link",
+    "fb": "Enter Facebook link",
+    "link": "Enter LinkedIn link",
+    "introductionT": "Introduction to the company",
+    "cultureT": "Describe company culture",
+    "save": "Save"
   },
   "status": {
     "allStatus": "All Status",
@@ -726,6 +777,7 @@
   "header": {
     "account": "Account",
     "profile": "Profile",
+    "profileCompany": "Company Profile",
     "apply": "My Applications",
     "setting": "Settings",
     "language": "Language",
@@ -743,7 +795,8 @@
     "home": "Home",
     "findJob": "Jobs",
     "company": "Companies",
-    "recruitment":"Published Recruitment"
+    "recruitment": "Published Recruitment",
+    "dashboard": "Job's postings"
   },
   "footer": {
     "detail": "Explore your dream career opportunity with us. TalentHarbor is your one-stop destination for finding the perfect job opportunity that matches your skills and ambitions.",
@@ -770,28 +823,28 @@
     "page": "Recruitment Page"
   },
   "landing": {
-    "title1":"Explore 15,000+ new jobs every month!",
-    "title2":"Find your dream job",
-    "title3":"Choose a career related to your job",
-    "content1":"Join Talent Harbor's community",
-    "content2":"Discover your dream career",
-    "content3":"Discover your dream career and apply for thousands of the hottest jobs today!",
-    "content4":"Communicate with the community",
-    "content5":"Have the opportunity to connect with 1,000,000+ talented candidates and grasp the latest job opportunities",
-    "content6":"Talent Harbor in the media",
-    "job1":"Sales & Business Development",
-    "job2":"Finance & Accounting",
-    "job3":"Human Resources Manager",
-    "job4":"Marketing",
-    "job5":"Information Technology",
-    "job6":"Artificial Intelligence",
-    "job7":"Digital Marketing",
-    "job8":"Graphic Design",
-    "job9":"Public Relations",
-    "job10":"Media & Events",
-    "job11":"Human Resources Administration",
-    "job12":"Logistics",
-    "job13":"Learn more",
+    "title1": "Explore 15,000+ new jobs every month!",
+    "title2": "Find your dream job",
+    "title3": "Choose a career related to your job",
+    "content1": "Join Talent Harbor's community",
+    "content2": "Discover your dream career",
+    "content3": "Discover your dream career and apply for thousands of the hottest jobs today!",
+    "content4": "Communicate with the community",
+    "content5": "Have the opportunity to connect with 1,000,000+ talented candidates and grasp the latest job opportunities",
+    "content6": "Talent Harbor in the media",
+    "job1": "Sales & Business Development",
+    "job2": "Finance & Accounting",
+    "job3": "Human Resources Manager",
+    "job4": "Marketing",
+    "job5": "Information Technology",
+    "job6": "Artificial Intelligence",
+    "job7": "Digital Marketing",
+    "job8": "Graphic Design",
+    "job9": "Public Relations",
+    "job10": "Media & Events",
+    "job11": "Human Resources Administration",
+    "job12": "Logistics",
+    "job13": "Learn more",
     "getTitle": "Get your dream job today",
     "findTitle": "Find your suitable jobs based on",
     "findTitle2": " your interest and study major",
@@ -857,9 +910,9 @@
     "password": "Password",
     "loginFooter": "Not have an account?",
     "loginLink": "Sign up now!",
-    "user":"Worker",
-    "employer":"Employer",
-    "titleR":"Let's create your TalentHarbor profile",
+    "user": "Worker",
+    "employer": "Employer",
+    "titleR": "Let's create your TalentHarbor profile",
     "register": "Register",
     "registerTitle": "Create your account",
     "registerButton": "Create Account",
@@ -869,9 +922,11 @@
     "activeSuccess": "Active Successfully! Please log in again",
     "registerSuccess": "Register Successfully",
     "loginFail": "Invalid Username or Password",
+    "deactivate": "Your account has not been activated",
+    "block": "Your account has been disabled!",
     "activeFail": "Email or Activation Code is incorrect! Please re-enter",
     "validate": "Please fill all the information.",
-    "errorPassword":"Incorrect Password",
+    "errorPassword": "Incorrect Password",
     "emailError": "Email already exists",
     "usernameError": "Username already exists",
     "passwordError": "Password must be alphanumeric at least 6 characters, one uppercase letter, and no whitespace",
@@ -882,21 +937,43 @@
     "errorAccessJobAndJobName": "Error when accessing into job post or resume data",
     "errorAccesAvailableInterviewers": "Error when accessing into available interviewers data"
   },
-  "post":{
-    "post":"Published Recruitment",
-    "required":"This is a required section",
-    "role":"Job role",
-    "title":"Job title",
-    "address":"Work address",
-    "type":"Type of work",
-    "salary":"Salary (VND)",
-    "salaryy":"Wage agreement",
-    "description":"Job description",
-    "requirements":"Job requirements",
-    "education":"Education requirements",
-    "experience":"Experience required",
-    "deadline":"Application deadline",
-    "days":"Minimum duration 3 days",
-    "done":"Done"
+  "post": {
+    "post": "Published Recruitment",
+    "required": "This is a required section",
+    "role": "Job role",
+    "roleT": "Select job role",
+    "roleMain": "Profession",
+    "roleMainT": "Choose profession",
+    "title": "Job title",
+    "titleT": "Enter job title",
+    "address": "Work address",
+    "addressT": "Enter working address",
+    "type": "Type of work",
+    "salary": "Salary (VND)",
+    "salaryy": "Wage agreement",
+    "bir": "Please select date of birth",
+    "description": "Job description",
+    "descriptionT": "Describe the type of work in this position",
+    "requirementsT": "Describe the requirements and responsibilities of this position",
+    "requirements": "Job requirements",
+    "education": "Education requirements",
+    "experience": "Experience required",
+    "deadline": "Application deadline",
+    "days": "Minimum duration 3 days",
+    "done": "Done",
+    "cancel": "Cancel",
+    "save": "Save",
+    "min": "Minimum",
+    "postt": "Posted",
+    "update": "Updated",
+    "share": "Share",
+    "apllied": "Applied",
+    "aplliedNow": "Apply now",
+    "expired": "(Expired)",
+    "managePost": "This post is managed by",
+    "recruiter": "Recruiter of ",
+    "warning": "Safe when looking for a job on TalentHarbor",
+    "titleWarning": "DO NOT provide bank or credit card information when applying. Employers will never ask for application fees or training fees.",
+    "titleReport": "If you find that this recruitment information is suspected of being fraudulent or providing false information, please report to us via email khangthinh@gmail.com"
   }
 }
